--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Cython==0.29.21
-librosa==0.8.0
-matplotlib==3.3.1
-numpy==1.18.5
-phonemizer==2.2.1
-scipy==1.5.2
-torch==1.13.1
-torchvision==0.14.1
-Unidecode==1.1.1
-tensorboardX
+Cython==3.0.2
+librosa==0.10.1
+matplotlib==3.7.2
+numpy==1.24.4
+phonemizer==3.2.1
+scipy==1.11.2
+# torch==2.0.1
+# torchaudio==2.0.2
+# torchvision==0.15.2
+Unidecode==1.3.6
+tensorboard==2.14.0
